Well, that's embarassing.
Renamed the project from singular to plural and missed a reference in
App.xaml. I can't believe I forgot the cardinal rule of checkins; don't
check in broken code.

--- a/JustTraceExamples/App.xaml
+++ b/JustTraceExamples/App.xaml
@@ -5,7 +5,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/JustTraceExample;component/Resources.xaml" />
+                <ResourceDictionary Source="/JustTraceExamples;component/Resources.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
         </Application.Resources>
